<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_home"
            />
        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/ic_assessment_black_24dp"
            android:title="@string/nav_statistics"
            />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_settings"
            />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/nav_search"
            />

        <item
            android:id="@+id/nav_FAQ"
            android:icon="@drawable/ic_question_answer_black_24dp"
            android:title="@string/nav_FAQ"
            />
        <item
            android:id="@+id/nav_support"
            android:icon="@android:drawable/sym_action_email"
            android:title="@string/nav_support"
            />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_description_white_24dp"
            android:title="@string/nav_about"
            />
        <!--//DEBUG-->
        <!--
        <item
            android:id="@+id/nav_debug"
            android:title="Debug"
            />
            -->
    </group>

</menu>