<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Presenter.Debug">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- TODO: Update blank fragment layout -->
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:src="@drawable/ic_logo_light" />
            <Button
                android:id="@+id/btn_crash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:layout_toRightOf="@+id/btn_test"
                style="@style/AppTheme.Button"

                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:text="@string/crash_test" />

            <Button
                android:id="@+id/btn_test"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="10dp"
                style="@style/AppTheme.Button"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:text="@string/btn_test" />

            <Button
                android:id="@+id/btn_test_restart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="10dp"
                style="@style/AppTheme.Button"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:text="@string/btn_test_restart" />

            <Button
                android:id="@+id/btn_edns_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="10dp"
                style="@style/AppTheme.Button"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:text="@string/btn_edns_code" />

            <Button
                android:id="@+id/btn_edns_payload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="10dp"
                style="@style/AppTheme.Button"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:text="@string/btn_edns_payload" />
            <Button
                android:id="@+id/btn_log"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="10dp"
                style="@style/AppTheme.Button"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:text="@string/btn_test_log" />
            <Button
                android:id="@+id/btn_dnsset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="10dp"
                style="@style/AppTheme.Button"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:text="@string/btn_dnsset" />
            <Button
                android:id="@+id/btn_counts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="10dp"
                style="@style/AppTheme.Button"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:text="@string/btn_show_counts" />

            <Button
                android:id="@+id/btn_reconnect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="10dp"
                style="@style/AppTheme.Button"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:text="@string/btn_test_reconnect" />

            <Button
                android:id="@+id/btn_distribution"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="10dp"
                style="@style/AppTheme.Button"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:text="@string/btn_distribution" />



        </LinearLayout>

    </ScrollView>
    <ProgressBar
        android:id="@+id/progressBar_cyclic"
        android:background="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:minWidth="40dp"
        android:minHeight="40dp"
        android:layout_gravity="center"
       android:visibility="gone" />

</FrameLayout>