<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Presenter.About"
    android:background="@drawable/gradient"
    >
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_logo_light" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/text_size_small"
            android:autoLink="web"
            android:layout_marginTop="40dp"

            android:text="@string/about_description"
            />
        <TextView
            android:id="@+id/privacyBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            android:layout_marginEnd="0dp"
            android:background="@drawable/rounded_corner_gray"
            android:paddingLeft="12dp"
            android:paddingTop="4dp"
            android:paddingRight="12dp"
            android:paddingBottom="4dp"
            android:clickable="true"
            android:text="@string/about_privacy"
            android:textAllCaps="false"
            android:textSize="@dimen/text_size_small" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColorLink="@android:color/white"
            android:text="@string/about_contributors"
            android:textSize="@dimen/text_size_tiny"
            android:gravity="center"
            android:layout_margin="10dp"
            />
            <TextView
                android:id="@+id/app_version"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="@dimen/text_size_tiny"
                android:gravity="center"

                android:text=""
                />
        </LinearLayout>
    </LinearLayout>
    </ScrollView>
</FrameLayout>