<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Presenter.Search">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="20dp">
    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_marginTop="30dp"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_hint" />

    <EditText
        android:id="@+id/search_input"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="text"/>

    <Button
        android:id="@+id/search_btn"
        style="@style/AppTheme.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/search_btn"
        android:textAllCaps="false" />
    <LinearLayout
        android:id="@+id/search_frame_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:visibility="invisible"
        >
        <TextView
            android:id="@+id/website_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:gravity="center"
            android:text="WEBSITE STATUS"
            android:textAllCaps="false"
            android:textSize="@dimen/text_size_medium"
            android:visibility="visible"/>
    <TextView
        android:id="@+id/search_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"

        android:layout_gravity="center"
        android:background="@drawable/rounded_corner_nonblocked"
        android:text="Not Blocked!"
        android:textAllCaps="false"
        android:textSize="@dimen/text_size_huge"
        android:visibility="visible"/>
        <TextView
            android:id="@+id/search_url"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"

            android:text="abc"
            />
        <TextView
            android:id="@+id/provider_exp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"

            android:text="@string/search_result"
            android:visibility="invisible"/>
        <TextView
            android:id="@+id/provider_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"

            android:layout_marginTop="20dp"
            android:visibility="invisible"
            android:text="xforce.suspicious\ndomaintools.covid19" />
    </LinearLayout>
</LinearLayout>

</FrameLayout>